@@ -1,4 +1,4 @@
-$Id: History,v 1.7 1999-05-18 12:51:43 johna Exp $
+$Id: History,v 1.8 1999-05-19 17:40:56 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+interfaces-01-00-03  19th April 1999  John Allison
+- Protected G4VBasicShell.cc with if( tempPath.length()>0 ).
 
 interfaces-01-00-02  18th April 1999  John Allison
 - Tagged.
